--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="Weather/style.css">
     
 
 </head>
@@ -15,13 +15,13 @@
         <button onclick="getWeather()">Search</button>
 
         <div id="weather-output">
-            <img src="weather-icon.png" id="weather-icon" alt="Weather Icon">
+            <img src="Weather/weather-icon.png" id="weather-icon" alt="Weather Icon">
             <div id="weather-details">
                 <div id="temp-div"></div>
                 <div id="weather-info"></div>
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="Weather/script.js"></script>
 </body>
 </html>
